--- a/WrittenComedy/app/src/main/res/drawable/primary_grad.xml
+++ b/WrittenComedy/app/src/main/res/drawable/primary_grad.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item>
+        <shape>
+            <gradient
+                android:startColor="#FFCC00"
+                android:endColor="#D95E00"
+                android:type="linear" />
+        </shape>
+    </item>
 </selector>
