--- a/WrittenComedy/app/src/main/res/layout/activity_login.xml
+++ b/WrittenComedy/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="40dp"
+        android:src="@drawable/ic_written_comedy_logo"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
