--- a/WrittenComedy/app/src/main/res/drawable/primary_grad.xml
+++ b/WrittenComedy/app/src/main/res/drawable/primary_grad.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#FFCC00"
-                android:endColor="#D95E00"
+                android:startColor="@color/startOrange"
+                android:endColor="@color/endOrange"
                 android:type="linear" />
         </shape>
     </item>
